//
// Copyright 2017, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.test.identifiers;

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.identifiers";
option java_multiple_files = true;
option java_outer_classname = "IdentifiersShouldProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "spine/options.proto";

// Only for usage in `IdentifiersShould` class.

message NestedMessageId {
    google.protobuf.StringValue id = 1;
}

message TimestampFieldId {
    google.protobuf.Timestamp id = 1;
}

message SeveralFieldsId {
    string string = 1;
    int32 number = 2;
    google.protobuf.StringValue message = 3;
}

message IdWithPrimitiveFields {
    string name = 1;
    int32 number = 2;
    bool flag = 3;
}
